kubernetes/misc/flaresolverr/manifests/flaresolverr.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  labels:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: flaresolverr
spec:
  type: ClusterIP
  ports:
    - name: flaresolverr
      port: 8191
      protocol: TCP
  selector:
    kalexlab.xyz/app: flaresolverr
    kalexlab.xyz/component: flaresolverr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  labels:
    kalexlab.xyz/app: flaresolverr
    kalexlab.xyz/component: flaresolverr
spec:
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: flaresolverr
      kalexlab.xyz/component: flaresolverr
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: flaresolverr
        kalexlab.xyz/component: flaresolverr
        kalexlab.xyz/monitoring: "true"
        egress.kalexlab.xyz/policy: vpn
    spec:
      restartPolicy: Always

      containers:
        - name: flaresolverr
          image: "ghcr.io/flaresolverr/flaresolverr:v3.5.2"

          ports:
            - containerPort: 8191
              protocol: TCP

          resources:
            requests:
              memory: 100Mi
              cpu: 20m
            limits:
              memory: 2Gi
              cpu: 1000m

          readinessProbe:
            httpGet:
              path: /
              port: 8191
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8191
            failureThreshold: 3
            periodSeconds: 30

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - mountPath: /tmp
              name: flaresolverr-tmp
            - mountPath: /app
              name: flaresolverr-app

      enableServiceLinks: false
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault

      volumes:
        - name: flaresolverr-tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: flaresolverr-app
          emptyDir:
            sizeLimit: 1Gi
